<resources>
    <string name="app_name">YaBank</string>
    <string name="app_name_lower">yabank</string>

    <string name="login_hint_usuario">Usuario</string>
    <string name="login_hint_contra">Contraseña</string>
    <string name="login_button_login">Iniciar sesión</string>
    <string name="login_error_usuario">Ingresa el usuario</string>
    <string name="login_error_contra">Escribe la contraseña</string>

    <string name="sharedPreferences">SharedPreferencesYa</string>
    <string name="keyLogin">loggedIn</string>
    <string name="searchable_compania">Compañía</string>


    <!--  Content Descriptors  -->

    <string name="content_login_icon">Icono de YaBank</string>
    <string name="content_login_icono_usuario">A cont Usuario</string>
    <string name="content_login_icono_contra">A cont Contraseña</string>
    <string name="title_activity_menu">Menu</string>
    <string name="tab_text_1">Recargas</string>
    <string name="tab_text_2">Vacio1</string>
    <string name="tab_text_3">Vacio2</string>
    <string name="action_search">Biuscar</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
